--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
   "repository": "https://github.com/benwest/brody.git",
   "author": "BONG <work@bong.international>",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-register": "^6.24.1",
     "babel-runtime": "^6.25.0",
     "classnames": "^2.2.5",
     "eases": "^1.0.8",
     "express": "^4.15.3",
+    "glslify-loader": "^1.0.2",
     "js-combinatorics": "^0.5.2",
     "lodash": "^4.17.4",
     "mithril": "^1.1.3",
     "mithril-j2c": "^0.1.3",
     "mithril-node-render": "^2.1.0",
+    "mopt": "^5.1.1",
     "pm2": "^2.6.1",
-    "w3c-xmlhttprequest": "^2.1.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "glslify-loader": "^1.0.2",
     "raw-loader": "^0.5.1",
     "reload-server-webpack-plugin": "^1.0.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
+    "w3c-xmlhttprequest": "^2.1.2",
     "webpack": "^3.4.1"
   },
   "scripts": {
