--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.5",
     "eases": "^1.0.8",
     "express": "^4.15.3",
+    "gl-vec2": "^1.0.0",
     "glslify-loader": "^1.0.2",
     "js-combinatorics": "^0.5.2",
     "lodash": "^4.17.4",
@@ -27,6 +28,7 @@
     "mopt": "^5.1.1",
     "pm2": "^2.6.1",
     "raw-loader": "^0.5.1",
+    "regl": "^1.3.0",
     "reload-server-webpack-plugin": "^1.0.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "w3c-xmlhttprequest": "^2.1.2",
